fix(chat-ui): collapse desktop listen ask panel when ask list is empty

--- a/src/cook-web/src/app/c/[[...id]]/Components/ChatUi/ListenModeRenderer.scss
+++ b/src/cook-web/src/app/c/[[...id]]/Components/ChatUi/ListenModeRenderer.scss
@@ -319,3 +319,9 @@
     bottom: 52px;
   }
 }
+
+
+.slide-player__interaction-arrow{
+  left: auto !important;
+  right: 139px !important;
+}
